--- a/style.css
+++ b/style.css
@@ -1,1 +1,5 @@
+body {
+  background: url("https://www.shutterstock.com/image-photo/gray-cat-knife-fork-eats-600w-1910733118.jpg");
+}
+
 /*# sourceMappingURL=style.css.map */
